--- a/KifuAniMaker/KifuAniMaker.csproj
+++ b/KifuAniMaker/KifuAniMaker.csproj
@@ -32,21 +32,99 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shogi\Action.cs" />
+    <Compile Include="Shogi\BlackWhite.cs" />
+    <Compile Include="Shogi\Board.cs" />
+    <Compile Include="Shogi\Move.cs" />
+    <Compile Include="Shogi\Options.cs" />
+    <Compile Include="Shogi\Pieces\Bishop.cs" />
+    <Compile Include="Shogi\Pieces\Gold.cs" />
+    <Compile Include="Shogi\Pieces\King.cs" />
+    <Compile Include="Shogi\Pieces\Knight.cs" />
+    <Compile Include="Shogi\Pieces\Lance.cs" />
+    <Compile Include="Shogi\Pieces\Pawn.cs" />
+    <Compile Include="Shogi\Pieces\Piece.cs" />
+    <Compile Include="Shogi\Pieces\Rook.cs" />
+    <Compile Include="Shogi\Pieces\Silver.cs" />
+    <Compile Include="Shogi\Utils\Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="img\japanese-chess-b02.jpg" />
+    <Content Include="img\japanese-chess-b02.png" />
+    <Content Include="img\number3_40.png" />
+    <Content Include="img\number3_41.png" />
+    <Content Include="img\number3_42.png" />
+    <Content Include="img\number3_43.png" />
+    <Content Include="img\number3_44.png" />
+    <Content Include="img\number3_45.png" />
+    <Content Include="img\number3_46.png" />
+    <Content Include="img\number3_47.png" />
+    <Content Include="img\number3_48.png" />
+    <Content Include="img\number3_49.png" />
+    <Content Include="img\sgl01.png" />
+    <Content Include="img\sgl02.png" />
+    <Content Include="img\sgl03.png" />
+    <Content Include="img\sgl04.png" />
+    <Content Include="img\sgl05.png" />
+    <Content Include="img\sgl06.png" />
+    <Content Include="img\sgl07.png" />
+    <Content Include="img\sgl08.png" />
+    <Content Include="img\sgl11.png" />
+    <Content Include="img\sgl12.png" />
+    <Content Include="img\sgl13.png" />
+    <Content Include="img\sgl15.png" />
+    <Content Include="img\sgl16.png" />
+    <Content Include="img\sgl17.png" />
+    <Content Include="img\sgl18.png" />
+    <Content Include="img\sgl22.png" />
+    <Content Include="img\sgl23.png" />
+    <Content Include="img\sgl25.png" />
+    <Content Include="img\sgl26.png" />
+    <Content Include="img\sgl27.png" />
+    <Content Include="img\sgl28.png" />
+    <Content Include="img\sgl31.png" />
+    <Content Include="img\sgl32.png" />
+    <Content Include="img\sgl33.png" />
+    <Content Include="img\sgl34.png" />
+    <Content Include="img\sgl35.png" />
+    <Content Include="img\sgl36.png" />
+    <Content Include="img\sgl37.png" />
+    <Content Include="img\sgl38.png" />
+    <Content Include="img\sgl41.png" />
+    <Content Include="img\sgl42.png" />
+    <Content Include="img\sgl43.png" />
+    <Content Include="img\sgl45.png" />
+    <Content Include="img\sgl46.png" />
+    <Content Include="img\sgl47.png" />
+    <Content Include="img\sgl48.png" />
+    <Content Include="img\sgl51.png" />
+    <Content Include="img\sgl53.png" />
+    <Content Include="img\sgl55.png" />
+    <Content Include="img\sgl56.png" />
+    <Content Include="img\sgl57.png" />
+    <Content Include="img\sgl58.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
