--- a/KifuAniMaker/KifuAniMaker.csproj
+++ b/KifuAniMaker/KifuAniMaker.csproj
@@ -36,6 +36,9 @@
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="Sprache, Version=2.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sprache.2.1.1-develop-00012\lib\net40\Sprache.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -55,6 +58,16 @@
     <Compile Include="Shogi\Board.cs" />
     <Compile Include="Shogi\Move.cs" />
     <Compile Include="Shogi\Options.cs" />
+    <Compile Include="Shogi\Parser\CSA\CSAParser.cs" />
+    <Compile Include="Shogi\Parser\CSA\CSAUtil.cs" />
+    <Compile Include="Shogi\Parser\CSA\ICSAStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\SetEndTime.cs" />
+    <Compile Include="Shogi\Parser\CSA\SetGameName.cs" />
+    <Compile Include="Shogi\Parser\CSA\SetOpening.cs" />
+    <Compile Include="Shogi\Parser\CSA\SetPositionBulk.cs" />
+    <Compile Include="Shogi\Parser\CSA\SetSite.cs" />
+    <Compile Include="Shogi\Parser\CSA\SetStartTime.cs" />
+    <Compile Include="Shogi\Parser\CSA\SetTurn.cs" />
     <Compile Include="Shogi\Pieces\Bishop.cs" />
     <Compile Include="Shogi\Pieces\Gold.cs" />
     <Compile Include="Shogi\Pieces\King.cs" />
@@ -68,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="kif\TextFile1.csa" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -126,5 +140,9 @@
     <Content Include="img\sgl57.png" />
     <Content Include="img\sgl58.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>copy "$(ProjectDir)\kif\*" "$(TargetDir)"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
