--- a/KifuAniMaker/packages.config
+++ b/KifuAniMaker/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
+  <package id="Sprache" version="2.1.1-develop-00012" targetFramework="net452" />
 </packages>
