--- a/KifuAniMaker/packages.config
+++ b/KifuAniMaker/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="Sprache" version="2.1.1-develop-00012" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0-preview2-25405-01" targetFramework="net452" />
 </packages>
