--- a/KifuAniMaker/KifuAniMaker.csproj
+++ b/KifuAniMaker/KifuAniMaker.csproj
@@ -54,6 +54,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MovieGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shogi\Action.cs" />
@@ -61,7 +62,7 @@
     <Compile Include="Shogi\Board.cs" />
     <Compile Include="Shogi\Moves\Move.cs" />
     <Compile Include="Shogi\Moves\Resign.cs" />
-    <Compile Include="Shogi\Options.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Shogi\Parser\CSA\CSAParser.cs" />
     <Compile Include="Shogi\Parser\CSA\CSAUtil.cs" />
     <Compile Include="Shogi\Parser\CSA\ICSAStatement.cs" />
