--- a/KifuAniMaker/packages.config
+++ b/KifuAniMaker/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
+  <package id="ShellProgressBar" version="3.0.0.0" targetFramework="net452" />
   <package id="Sprache" version="2.1.1-develop-00012" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0-preview2-25405-01" targetFramework="net452" />
 </packages>
