--- a/KifuAniMakerTest/packages.config
+++ b/KifuAniMakerTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0-preview2-25405-01" targetFramework="net452" />
 </packages>
