Statement名前空間追加

--- a/KifuAniMaker/KifuAniMaker.csproj
+++ b/KifuAniMaker/KifuAniMaker.csproj
@@ -66,26 +66,26 @@
     <Compile Include="Shogi\Moves\Move.cs" />
     <Compile Include="Shogi\Moves\Resign.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="Shogi\Parser\CSA\CommentStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\CommentStatement.cs" />
     <Compile Include="Shogi\Parser\CSA\CSAParser.cs" />
     <Compile Include="Shogi\Parser\CSA\CSAUtil.cs" />
-    <Compile Include="Shogi\Parser\CSA\ICSAStatement.cs" />
-    <Compile Include="Shogi\Parser\CSA\MoveStatement.cs" />
-    <Compile Include="Shogi\Parser\CSA\NullStatement.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetEndTime.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetEvent.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetOpening.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetPlayer.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetPosition.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetPositionBulk.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetPositionPiece.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetSite.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetStartTime.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetTime.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetTimeLimit.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetTurn.cs" />
-    <Compile Include="Shogi\Parser\CSA\SetVersion.cs" />
-    <Compile Include="Shogi\Parser\CSA\SpecialStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\ICSAStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\MoveStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\NullStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetEndTime.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetEvent.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetOpening.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetPlayer.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetPosition.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetPositionBulk.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetPositionPiece.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetSite.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetStartTime.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetTime.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetTimeLimit.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetTurn.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SetVersion.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\SpecialStatement.cs" />
     <Compile Include="Shogi\Pieces\All.cs" />
     <Compile Include="Shogi\Pieces\Bishop.cs" />
     <Compile Include="Shogi\Pieces\Gold.cs" />
