特殊な指し手、終局状況対応

--- a/KifuAniMaker/KifuAniMaker.csproj
+++ b/KifuAniMaker/KifuAniMaker.csproj
@@ -63,9 +63,21 @@
     <Compile Include="Shogi\Action.cs" />
     <Compile Include="Shogi\BlackWhite.cs" />
     <Compile Include="Shogi\Board.cs" />
+    <Compile Include="Shogi\Moves\Situations\Checkmate.cs" />
+    <Compile Include="Shogi\Moves\Situations\Draw.cs" />
+    <Compile Include="Shogi\Moves\Situations\Error.cs" />
+    <Compile Include="Shogi\Moves\Situations\IllegalAction.cs" />
+    <Compile Include="Shogi\Moves\Situations\IllegalMove.cs" />
+    <Compile Include="Shogi\Moves\Situations\Interruption.cs" />
     <Compile Include="Shogi\Moves\Move.cs" />
-    <Compile Include="Shogi\Moves\Resign.cs" />
+    <Compile Include="Shogi\Moves\Situations\Jishogi.cs" />
+    <Compile Include="Shogi\Moves\Situations\NotCheckmate.cs" />
+    <Compile Include="Shogi\Moves\Situations\Resign.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Shogi\Moves\Situations\Sennichite.cs" />
+    <Compile Include="Shogi\Moves\Situations\Situation.cs" />
+    <Compile Include="Shogi\Moves\Situations\TimeUp.cs" />
+    <Compile Include="Shogi\Moves\Situations\Win.cs" />
     <Compile Include="Shogi\Parser\CSA\Statement\CommentStatement.cs" />
     <Compile Include="Shogi\Parser\CSA\CSAParser.cs" />
     <Compile Include="Shogi\Parser\CSA\CSAUtil.cs" />
@@ -86,6 +98,19 @@
     <Compile Include="Shogi\Parser\CSA\Statement\SetTurn.cs" />
     <Compile Include="Shogi\Parser\CSA\Statement\SetVersion.cs" />
     <Compile Include="Shogi\Parser\CSA\Statement\SpecialStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\CheckmateStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\DrawStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\ErrorStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\IllegalActionStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\IllegalMoveStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\InterruptionStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\JishogiStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\NotCheckmateStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\ResignStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\RetractMoveStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\SennichiteStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\TimeUpStatement.cs" />
+    <Compile Include="Shogi\Parser\CSA\Statement\Special\WinStatement.cs" />
     <Compile Include="Shogi\Pieces\All.cs" />
     <Compile Include="Shogi\Pieces\Bishop.cs" />
     <Compile Include="Shogi\Pieces\Gold.cs" />
